--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,89 +1,49 @@
-// bower:scss
-// endbower
+@import 'colors';
+@import 'dashboard';
+@import 'nav';
 
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+html{
+	background:$gray;
 }
 
-body {
-  padding: 0;
-}
-
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
-
-  /* Make the masthead heading the same height as the navigation */
-  h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
-  }
-}
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-
-  .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-  }
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-
-  p + h4 {
-    margin-top: 28px;
-  }
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+#modal{
+	form{
+		position:relative;
+		.twitter-typeahead{
+			width:100%;
+			input.typeahead{
+				width: inherit;
+				border: 1px solid #e5e5e5;
+			}
+			.tt-menu{
+				width: inherit;
+				.tt-dataset{
+					width: inherit;
+					.uk-dropdown{
+						width:inherit;
+						display:block;
+					}
+				}
+				.uk-dropdown{
+					width:inherit;
+					display:block;
+				}
+			}
+		}
+		.typeahead{
+			position:relative;
+			.preview{
+				position: absolute;
+				right: 0;
+				top: 0px;
+				article{
+					//border: 1px solid #e5e5e5;
+					padding: 5px;
+					.title{
+						padding-left: 5px;
+					}
+				}
+			}
+		}
+	}
 }
