stage searchFilter and remove padding from profile and account pages

--- a/app/views/account.html
+++ b/app/views/account.html
@@ -1,8 +1,8 @@
 <div ng-include="'views/partials/_toolbar.html'"></div>
 <section class="uk-padding-small">
-	<div class="uk-container uk-width-2-3@l uk-width-2-3@m">
+	<div class="uk-container uk-width-2-3@l uk-width-2-3@m uk-padding-remove">
 		<div class="uk-card">
-			<div class="uk-card-body uk-padding-small">
+			<div class="uk-card-body uk-padding-remove">
 				<ul uk-tab>
 					<li><a href="#" class="">Account Details</a></li>
 					<li><a href="#" class="uk-hidden">Billing</a></li>
