--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -1,6 +1,6 @@
 <div ng-include="'views/partials/_toolbar.html'"></div>
 <div class="uk-section uk-section">
-	<div class="uk-container uk-width-1-2@l uk-width-2-3@m">
+	<div class="uk-container uk-width-1-2@l uk-width-2-3@m uk-padding-remove">
 		<div class="uk-text-center">
 			<img class="uk-border-circle" width="140" height="140" src="{{ profileData.image || 'https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png' }}" />
 			<p class="uk-text-lead	uk-padding-bottom uk-text-capitalize">{{ profileData.firstname }} {{ profileData.lastname }}</p>		
