--- a/app/views/users.html
+++ b/app/views/users.html
@@ -31,6 +31,8 @@
 				</tr>
 			</tbody>
 		</table>
-		<button ng-if="usersData.next_page_url" ng-click="next(usersData.current_page + 1)" class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom">Load More <div uk-spinner ng-if="loading"></div></button>
+		<div class="uk-width-1-1 uk-padding-small">
+			<button ng-if="usersData.next_page_url" ng-click="next(usersData.current_page + 1)" class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom">Load More <div uk-spinner ng-if="loading"></div></button>
+		</div>
 	</div>
 </section>
