--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -2,6 +2,12 @@
 <section class="uk-padding-small">
     <main class="uk-flex uk-flex-wrap uk-flex-wrap-around uk-grid-small" uk-grid>
     	<overview class="uk-width-1-1 uk-hidden" ng-if="dashboardSettings.myCourses.display && user.user_access_level >= 3"></overview>
-    	<my-courses class="uk-width-1-3@l uk-width-1-2@s uk-width-1-2@xs" ng-if="dashboardSettings.myCourses.display && user.user_type.name === 'student'"></my-courses>
+    	<my-courses class="uk-width-1-3@l uk-width-1-3@s uk-width-1-2@xs" ng-if="dashboardSettings.myCourses.display && user.user_type.name === 'student'"></my-courses>
+    	<student-list course="160" class="uk-width-1-3@l uk-width-1-2@s uk-width-1-2@xs" list="false
+    	"></student-list>
+    	<student-list course="163" class="uk-width-1-3@l uk-width-1-2@s uk-width-1-2@xs" list="true
+    	"></student-list>
+    	<student-list course="162" class="uk-width-1-3@l uk-width-1-2@s uk-width-1-2@xs" list="false
+    	"></student-list>
     </main>
 </section>
