use letter thumbnails if no user image is avialable

--- a/app/views/courses.html
+++ b/app/views/courses.html
@@ -6,7 +6,7 @@
 			<span class="uk-margin-small-right" uk-icon="ban"></span> {{ 'no courses' | uppercase }}
 		</div>
 	</div>
-	<main ng-if="coursesList.data.length" class="uk-padding-small uk-overflow-auto">
+	<main ng-if="coursesList.data.length" class="uk-overflow-auto">
 		<table class="uk-table uk-table-hover uk-table-middle uk-table-divider">
 			<thead>
 				<tr>
