--- a/app/views/course.html
+++ b/app/views/course.html
@@ -19,7 +19,7 @@
 										ng-show="!loading">
 									</user-pill>
 								</div>
-								<div class="uk-align-right" ng-if="false">
+								<div class="uk-align-right" ng-if="authorized">
 									<ul class="uk-iconnav toolbar">
     									<li><a ng-click="save(courseData.data)" uk-icon="icon: cloud-upload" class="uk-text-primary"></a></li>
 									</ul>
