style user-pill directive

--- a/app/styles/_dashboard.scss
+++ b/app/styles/_dashboard.scss
@@ -70,3 +70,13 @@
     	font-size:20px !important;
     }
 }
+
+user-pill{
+	display:block;
+}
+
+table{	
+	user-pill{
+		margin-bottom:5px !important;
+	}	
+}
