--- a/app/views/course.html
+++ b/app/views/course.html
@@ -22,6 +22,7 @@
 								<div class="uk-align-right" ng-if="authorized">
 									<ul class="uk-iconnav toolbar">
     									<li><a ng-click="save(courseData.data)" uk-icon="icon: cloud-upload" class="uk-text-primary"></a></li>
+    									<li><a ng-click="edit(course)" uk-icon="icon: cog" class="uk-text-muted"></a></li>
 									</ul>
 								</div>
 							</div>
