--- a/app/styles/_dashboard.scss
+++ b/app/styles/_dashboard.scss
@@ -4,7 +4,7 @@
 			background:#e6e6e6;
 	  }
 	  main{
-		.widget{
+		.uk-card{
 			.title{
 				margin:0px;
 			}
@@ -16,6 +16,11 @@
 					a{
 					  /*line-height: 1.7;
 					  vertical-align: middle;*/
+					  padding:5px;
+					  svg{
+					  	width:30px;
+					  	height:30px;
+					  }
 					}
 				}
 			}
@@ -24,25 +29,7 @@
 			form{
 				position:relative;
 				.twitter-typeahead{
-					width:100%;
-					input.typeahead{
-						padding-left: 40px !important;
-						width: inherit;
-					}
-					.tt-menu{
-						width: inherit;
-						.tt-dataset{
-							width: inherit;
-							.uk-dropdown{
-								width:inherit;
-								display:block;
-							}
-						}
-						.uk-dropdown{
-							width:inherit;
-							display:block;
-						}
-					}
+
 				}
 			}
 		}
@@ -79,4 +66,28 @@ instructor-courses{
 	user-pill{
 		margin-bottom:5px !important;
 	}	
+}
+
+.typeahead{
+	.twitter-typeahead{
+		width:100%;
+		input.typeahead{
+			padding-left: 40px !important;
+			width: inherit;
+		}
+		.tt-menu{
+			width: inherit;
+			.tt-dataset{
+				width: inherit;
+				.uk-dropdown{
+					width:inherit;
+					display:block;
+				}
+			}
+			.uk-dropdown{
+				width:inherit;
+				display:block;
+			}
+		}
+	}
 }
