--- a/app/views/course.html
+++ b/app/views/course.html
@@ -20,13 +20,18 @@
 									</user-pill>
 								</div>
 								<div class="uk-align-right" ng-if="authorized">
-									<ul class="uk-iconnav toolbar">
-    									<li><a ng-click="save(courseData.data)" uk-icon="icon: cloud-upload" class="uk-text-primary"></a></li>
-    									<li><a ng-click="edit(course)" uk-icon="icon: cog" class="uk-text-muted"></a></li>
+									<spinner ng-if="saving"></spinner>
+									<ul ng-if="!saving"class="uk-iconnav toolbar">
+    									<li>
+    										<a ng-click="save(courseData.data)" uk-icon="icon: cloud-upload"></a>
+    									</li>
+    									<li>
+    										<a ng-click="edit(course)" uk-icon="icon: cog"></a>
+    									</li>
 									</ul>
 								</div>
 							</div>
-							<div class="uk-card-body uk-overflow-auto">
+							<div class="uk-card-body uk-overflow-auto uk-padding-remove">
 								<spinner ng-if="loading"></spinner>
 								<div ng-if="!loading && !courseData.data" class="uk-placeholder uk-text-center uk-danger uk-text-muted uk-margin-remove uk-padding-small">
 									<span class="uk-margin-small-right uk-text-uppercase" uk-icon="ban"></span> {{ 'no students found' }}
