--- a/app/views/users.html
+++ b/app/views/users.html
@@ -4,7 +4,6 @@
 		<table class="uk-table uk-table-hover uk-table-middle uk-table-divider uk-padding-small">
 			<thead>
 				<tr>
-					<th class="uk-table-shrink"></th>
 					<th class="uk-table-expand">name</th>
 					<th class="uk-width-small">type</th>
 					<th class="uk-width-small">status</th>
@@ -13,9 +12,10 @@
 			</thead>
 			<tbody>
 				<tr ng-repeat="user in usersList">
-					<td><img class="uk-preserve-width uk-border-circle" src="{{ user.image_url }}" width="40" alt=""></td>
 					<td class="uk-table-link">
-						<a class="uk-link-reset uk-text-capitalize" ng-click="view(user)">{{ user.firstname }}, {{ user.lastname }}</a>
+						<a class="uk-link-reset uk-text-capitalize" ng-click="view(user)">
+							<user-pill user="user" name="true"><user-pill>
+						</a>
 					</td>
 					<td class="uk-table-link">
 						<a class="uk-link-reset uk-text-capitalize"><span class="uk-text-small uk-text-muted">{{ user.user_type.name }}</span></a>
