--- a/app/views/courses.html
+++ b/app/views/courses.html
@@ -45,8 +45,8 @@
 					</td>
 					<td>
 						<ul class="uk-iconnav">
-							<li ng-if="false"><a ng-click="view(course,'course',true)" uk-icon="icon: file-edit" title="edit"></a></li>
-							<li><a ng-href="#!/learning/course/{{course.id}}" class="uk-button uk-button-small uk-button-default uk-text-uppercase" title="edit">view</a></li>
+							<li><a ng-click="view(course,'course',true)" uk-icon="icon: file-edit" title="edit course"></a></li>
+							<li><a ng-href="#!/learning/course/{{course.id}}" uk-icon="icon: list" title="view course"></a></li>
 						</ul>
 					</td>
 				</tr>
