--- a/app/views/login.html
+++ b/app/views/login.html
@@ -23,7 +23,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="uk-card-footer">
+				<div class="uk-card-footer uk-padding-small">
 					<div class="uk-margin">
 						<button 
 							class="uk-button uk-button-primary uk-width-1-1" 
