--- a/app/views/courses.html
+++ b/app/views/courses.html
@@ -45,7 +45,7 @@
 					</td>
 					<td>
 						<ul class="uk-iconnav">
-							<li><a ng-click="view(course,'course',true)" uk-icon="icon: file-edit" title="edit course"></a></li>
+							<li><a ng-click="view(course,'course',true,$index)" uk-icon="icon: file-edit" title="edit course"></a></li>
 							<li><a ng-href="#!/learning/course/{{course.id}}" uk-icon="icon: list" title="view course"></a></li>
 						</ul>
 					</td>
