display pie charts and add styling

--- a/app/styles/_dashboard.scss
+++ b/app/styles/_dashboard.scss
@@ -92,3 +92,13 @@ instructor-courses{
 		}
 	}
 }
+
+.chart{
+	position:relative;
+	.label{
+		position: absolute;
+	    top: 50%;
+	    right: 50%;
+	    transform: translate(50%,-50%);
+	}
+}
