--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -2,8 +2,8 @@
 <section class="uk-padding-small">
 	<main class="uk-grid-small" uk-grid>
 		<overview class="uk-width-1-1" ng-if="user.access_level.id >= 3" ></overview>
-	   	<instructor-courses list="true" user="user" class="uk-width-1-3@m" ng-if="user.user_type.name === 'teacher'"></instructor-courses>
-	   	<my-courses list="true" user="user" class="uk-width-1-3@m" ng-if="user.user_type.name === 'student'"></my-courses>
-	   	<tabs tabs="tabs" class="uk-width-1-1"></tabs>
+	   	<instructor-courses list="true" user="user" heading="true" class="uk-width-1-3@m" ng-if="user.user_type.name === 'teacher'"></instructor-courses>
+	   	<my-courses list="true" user="user" heading="true" class="uk-width-1-3@m" ng-if="user.user_type.name === 'student'"></my-courses>
+	   	<tabs tabs="tabs" class="uk-width-1-1" ng-if="user.access_level.id >= 3"></tabs>
 	</main>
 </section>
