--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -1,9 +1,7 @@
 <div ng-include="'views/partials/_toolbar.html'"></div>
 <section class="uk-padding-small">
 	<main class="uk-grid-small" uk-grid>
-		<overview class="uk-width-1-1" ng-if="user.access_level.id >= 3" ></overview>
-	   	<instructor-courses list="true" id="user.id" heading="true" class="uk-width-1-3@m" ng-if="user.user_type.name === 'teacher'"></instructor-courses>
-	   	<my-courses list="true" id="user.id" heading="true" class="uk-width-1-3@m" ng-if="user.user_type.name === 'student'"></my-courses>
+	   	<usercard data="user" class="uk-width-1-2@m" tabs="true" type="user.user_type.name" details="true"></usercard>
 	   	<tabs tabs="tabs" class="uk-width-1-1" ng-if="user.access_level.id >= 3"></tabs>
 	</main>
 </section>
